# downloader

./: .gitignore  README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml  requirements.txt
flows/debug/: .flow.ui.oo.json  flow.oo.yaml
flows/debug/scriptlets/: +scriptlet#1.py  +scriptlet#2.py
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/test/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
shared/: download.py  executor.py  retry.py  serial.py  task.py  utils.py
subflows/file-downloader/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/file-downloader/scriptlets/: +scriptlet#1.py  +scriptlet#2.py
subflows/folder-downloader/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/folder-downloader/scriptlets/: +scriptlet#1.py  +scriptlet#2.py
subflows/url2file/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/url2file/scriptlets/: +scriptlet#1.py
tasks/download/: __init__.py  task.oo.yaml
tasks/files-downloader/: __init__.py  task.oo.yaml
tasks/url2file/: __init__.py  task.oo.yaml
tests/: test_download.py
