[project]
name = "downloader"
version = "0.1.0"
description = ""
authors = [
    {name = "TaoZeyu",email = "i@taozeyu.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "downloaderx (==0.1.3)"
]

[tool.poetry]
package-mode = false
packages = [{include = "downloader", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
